# PID-Controller

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  PIDController.cpp  VirtualPIDController.cpp  main.cpp  pid_controller.cpp
include/: PIDController.hpp  VirtualPIDController.hpp  pid_controller.hpp
results/: cppcheck.txt  cppcheckOutput.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  mockTest.cpp  mockVirtualPIDController.cpp  mockVirtualPIDController.hpp  test.cpp
